--- a/Ship-Fit/Ship-Fit/en.lproj/MainStoryboard_iPad.storyboard
+++ b/Ship-Fit/Ship-Fit/en.lproj/MainStoryboard_iPad.storyboard
@@ -102,29 +102,19 @@
                         <rect key="frame" x="0.0" y="20" width="768" height="955"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="W3t-mA-gnO">
-                                <rect key="frame" x="75" y="890.5" width="70" height="44"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Path">
-                                    <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="W3t-mA-gnO">
+                                <rect key="frame" x="85" y="897" width="73" height="42"/>
+                                <state key="normal" image="pathinactive.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="togglePathAction:" destination="2" eventType="touchUpInside" id="60g-Ma-cOw"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="OR7-vk-2XA">
-                                <rect key="frame" x="19" y="890.5" width="47" height="44"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="ME">
-                                    <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="OR7-vk-2XA">
+                                <rect key="frame" x="12" y="890" width="55" height="55"/>
+                                <state key="normal" image="locationinactive.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="zoomToMe:" destination="2" eventType="touchUpInside" id="EJn-ON-oCE"/>
@@ -196,14 +186,14 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="wind" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="GbP-un-rsm">
-                                <rect key="frame" x="20" y="64" width="72" height="21"/>
+                                <rect key="frame" x="20" y="122" width="72" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="windDir" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="XXQ-6Z-Me5">
-                                <rect key="frame" x="20" y="86" width="72" height="21"/>
+                                <rect key="frame" x="35" y="91" width="72" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -230,6 +220,10 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="Wind-Flag-Storm-icon.png" id="Hxq-dc-fEG">
+                                <rect key="frame" x="19" y="64" width="56" height="51"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -238,7 +232,9 @@
                         <outlet property="compDegLabel" destination="4dy-3t-9SW" id="hbP-71-LYk"/>
                         <outlet property="compDirLabel" destination="BiD-aA-ree" id="7eV-Yi-vUm"/>
                         <outlet property="latLabel" destination="Ntr-63-WdG" id="cc9-kY-QIc"/>
+                        <outlet property="locationButton" destination="OR7-vk-2XA" id="Wb7-Zv-CyP"/>
                         <outlet property="longLabel" destination="Ywa-cJ-Qd1" id="RDr-p6-aLG"/>
+                        <outlet property="pathButton" destination="W3t-mA-gnO" id="gnD-v9-tAX"/>
                         <outlet property="speedLabel" destination="MUH-pJ-kjN" id="0A8-ns-G0B"/>
                         <outlet property="sunLabel" destination="BPz-O2-DUC" id="7Zi-YS-dS0"/>
                         <outlet property="tempHighLabel" destination="PsP-tx-hRZ" id="eHo-EQ-OpC"/>
@@ -462,9 +458,12 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Wind-Flag-Storm-icon.png" width="256" height="256"/>
         <image name="button_black_pause.png" width="128" height="128"/>
         <image name="button_black_play.png" width="128" height="128"/>
-        <image name="first" width="255" height="256"/>
+        <image name="first" width="66" height="71"/>
+        <image name="locationinactive.png" width="255" height="256"/>
+        <image name="pathinactive.png" width="66" height="71"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar" statusBarStyle="blackTranslucent"/>
